--- a/JSP/src/main/webapp/01_basic_class/2_form/09_myform.css
+++ b/JSP/src/main/webapp/01_basic_class/2_form/09_myform.css
@@ -108,7 +108,7 @@ form input:not([type=radio]) {
 	width: 200px;
 }
 					
-form input:not([type=submit]):focus, {
+form input:not([type=submit]):focus {
 	background: #eaeaea;
 }
 					
